--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://duythuong300599.github.io/clonezingbydt",
   "name": "zing-mp3",
   "version": "0.1.0",
   "private": true,
@@ -21,10 +22,13 @@
     "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "slick-carousel": "^1.8.1",
+    "surge": "^0.23.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -46,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
